# cognitive-aiops-agent

./: LICENSE  README.md
new project/: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ai_devops_ultimate (1).py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
new project/devops_agent/: __init__.py  agent.py  cognitive.py  config.py  fastapi_app.py  logging_config.py  memory.py  schemas.py  tracing.py
new project/legacy/: README_LEGACY.md
new project/scripts/: benchmark.py  gen_client.py
new project/tests/: test_auth.py  test_basic.py  test_fastapi_import.py  test_rate_limit.py  test_reasoning.py  test_schema.py  test_trace_toggle.py  test_tracing_noop.py
